# annex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  annex.g4
.github/workflows/: ci.yml
src/: lib.rs  main.rs  util.rs
src/ast/: grammar.rs  io.rs  mod.rs  oper.rs  sym_table.rs  types.rs  util.rs
src/ir/: mod.rs  util.rs
src/lexer/: io.rs  mod.rs
src/parse/: mod.rs  structs.rs  util.rs
src/sem/: analyzer.rs  err.rs  mod.rs  sym_table.rs  table.rs  visitor.rs
src/syntax/: grammar.rs  io.rs  mod.rs  types.rs
src/token/: debug.rs  enums.rs  io.rs  mod.rs  types.rs
src/util/: mod.rs
tests/: lexer.rs  lexer_tests.rs  parser.rs  parser_tests.rs  util.rs
tests/expected/lexer/: max_i32.txt
tests/expected/parse/: many_expr.txt  many_expr2.txt  max_i32.txt  more_arithmetic.txt  process_array.txt
tests/files/: arithmetic.ax  function_mismatch.ax  invalid_condition.ax  many_expr.ax  many_expr2.ax  many_expr3.ax  max_i32.ax  more_arithmetic.ax  process_array.ax  process_array.expected  redefined_variable.ax  simple_condition.ax  type_mismatch.ax  undefined_variable.ax  valid_program.ax
