[package]
name = "annex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "annex"
path = "src/main.rs"

[lib]
name = "annex"
path = "src/lib.rs"

[dependencies]
colog = "1.3.0"
current_platform = "0.2.0"
fs-err = "3.0.0"
log = "0.4.22"
phf = { version = "0.12.1", features = ["macros"] }
rustc_version_runtime = "0.3.0"
